-
Bug
-
Resolution: Done
-
P0: Blocker
-
5.5.0 Alpha
-
None
-
-
7f5b94b473cd19217127a69c0b8995e00b023173
Assert triggered when attempting to send an event to a receiver in a different thread.
/../qt-project/qt55/src/qtbase/src/corelib/global/qglobal.cpp:2902 (void qt_assert_x(const char*, const char*, const char*, int)): ASSERT failure in QCoreApplication::sendEvent: "Cannot send events to objects owned by a different thread. Current thread 60e62ba8. Receiver '' (of type 'TextInputWithHandles_QMLTYPE_37') was created in thread 5a68ab78", file /../qt-project/qt55/src/qtbase/src/corelib/kernel/qcoreapplication.cpp, line 550
Reproducible with the minibrowser example in QtWebView.
- is required for
-
QTBUG-44653 Issues to be fixed before Qt 5.5 Beta
-
- Closed
-
| For Gerrit Dashboard: QTBUG-44712 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 107435,4 | Fix shortcut overriding. | 5.5 | qt/qtbase | Status: MERGED | -2 | 0 |